samples/_failures_safe/1761128507_1a447d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_74b3ad30.c: In function ‘main’:
./samples/SAFE/__tmp_74b3ad30.c:130:16: error: missing terminating " character
  130 |         printf("Invalid input\n
      |                ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_74b3ad30.c:130:9: error: expected expression at end of input
  130 |         printf("Invalid input\n
      |         ^~~~~~
./samples/SAFE/__tmp_74b3ad30.c:130:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_74b3ad30.c:130:9: error: expected declaration or statement at end of input
